--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.330.0",
     "next": "14.1.0",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
